--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,14 @@
 Release Notes											{#changelog}
 =============
 
+2.X.X release ():
+---------------------------
+
+- Added more type conversions to remove warnings on some 64-bit platforms.
+- Removed potential nameing conflicts of internal functions with C standard 
+  library functions.
+
+
 2.2.0 release (2021-06-12):
 ---------------------------
 
